# PiCoMonitor

./: .gitignore  CMakeLists.txt  CPUWidget.cpp  Com.cpp  Com.h  DiskWidget.cpp  GraphWidget.cpp  GraphWidget.h  NullWidget.h  PiCoMonitor.c  PiCoMonitor.cpp  PiCoMonitor.py  README.md  Screen.cpp  Screen.h  Widget.cpp  Widget.h  exemple.json  picojson.h  requirements.txt  terminal.sh
src/: CPUWidget.cpp  CPUWidget.h  Com.cpp  Com.h  DiskWidget.cpp  DiskWidget.h  GraphWidget.cpp  NullWidget.cpp  PiCoMonitor.cpp  Screen.cpp  Screen.h  Widget.cpp  Widget.h
st7789Ex/: CMakeLists.txt  README.md  st7789Ex.cmake  st7789Ex.cpp  st7789Ex.hpp
